[gd_scene load_steps=4 format=3 uid="uid://bpw6bafl11axm"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_xsqil"]
[ext_resource type="FontFile" uid="uid://1irtet74uufh" path="res://Assets/UI/AncientModernTales-a7Po.ttf" id="2_giuph"]
[ext_resource type="PackedScene" uid="uid://bnekpfme3n8a4" path="res://scenes/options_menu.tscn" id="3_oxpx8"]

[node name="pause_menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsqil")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 32

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 164
text = "Paused"

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Save" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 50
text = "Save"

[node name="Load" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 50
text = "Load"

[node name="Options" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_giuph")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("3_oxpx8")]
visible = false
layout_mode = 1

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="GridContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="GridContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
